Rename accredited provider to accredited body
Goes with https://github.com/DFE-Digital/search-and-compare-ui/pull/310

--- a/src/ui/Views/Course/Show.cshtml
+++ b/src/ui/Views/Course/Show.cshtml
@@ -87,7 +87,7 @@
             @if (!string.IsNullOrEmpty(@Model.Course.AccreditingProviderName))
             {
               <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Accredited provider</dt>
+                <dt class="govuk-summary-list__key">Accredited body</dt>
                 <dd class="govuk-summary-list__value">@Model.Course.AccreditingProviderName</dd>
               </div>
             }
