--- a/src/ui/Views/Organisation/About.cshtml
+++ b/src/ui/Views/Organisation/About.cshtml
@@ -49,8 +49,8 @@
         </div>
 
         @if(Model.AboutTrainingProviders.Any()) {
-          <h2 class="govuk-heading-l">About your accredited provider</h2>
-          <p id="about-training-provider-hint" class="govuk-body">Describe any advantages and special features of your accredited provider. You must be specific and factual with any claims you make, and support them with evidence.</p>
+          <h2 class="govuk-heading-l">About your accredited body</h2>
+          <p id="about-training-provider-hint" class="govuk-body">Describe any advantages and special features of your accredited body. You must be specific and factual with any claims you make, and support them with evidence.</p>
 
           @for (int i = 0; i < Model.AboutTrainingProviders.Count; i++) {
             var aboutTrainingProviderKey = "AboutTrainingProviders_" + i + "__Description";
