--- a/src/ui/Views/Organisation/Show.cshtml
+++ b/src/ui/Views/Organisation/Show.cshtml
@@ -59,7 +59,7 @@
       if (!string.IsNullOrWhiteSpace(provider.ProviderCode))
       {
         <h3 class="govuk-heading-m">
-          <span class="govuk-caption-m">Accredited provider</span>
+          <span class="govuk-caption-m">Accredited body</span>
           @provider.ProviderName
         </h3>
       }
