--- a/src/ui/Views/Organisation/Show.cshtml
+++ b/src/ui/Views/Organisation/Show.cshtml
@@ -24,96 +24,32 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">@Model.ProviderName</h1>
-      <h2 class="govuk-heading-l">Step 1. About your organisation</h2>
+      <h2 class="govuk-heading-m"><a class="govuk-link" href="@Url.Action("Details", "Organisation")">About your organisation</a></h2>
       <p>Use this section to:</p>
-      <ul class="govuk-list govuk-list--bullet">
+      <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-8">
         <li>write about your organisation</li>
         <li>set your contact details</li>
         <li>publish this information on all course pages</li>
       </ul>
-
-      <p class="govuk-body"><strong class="govuk-tag govuk-tag--@Model.Status.ToLower() govuk-tag--inline">@Model.Status</strong> <a class="govuk-link" href="@Url.Action("Details", "Organisation")">Fill in your organisation information</a></p>
     </div>
   </div>
 
-  <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
-
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h2 class="govuk-heading-l">Step 2. Course details</h2>
+      <h2 class="govuk-heading-m"><a href="@Url.Action("Courses", "Organisation")" class="govuk-link">Courses</a></h2>
       <p>Use this section to:</p>
-      <ul class="govuk-list govuk-list--bullet">
+      <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-8">
         <li>write about each course</li>
         <li>preview and publish courses</li>
         <li>copy content between courses</li>
       </ul>
-
-      <p class="govuk-body">Preview each course before you publish it, to see how it will look online to applicants.</p>
     </div>
   </div>
 
-  <hr class="govuk-section-break govuk-section-break--m">
-
-    @foreach (var provider in Model.Providers)
-    {
-      if (!string.IsNullOrWhiteSpace(provider.ProviderCode))
-      {
-        <h3 class="govuk-heading-m">
-          <span class="govuk-caption-m">Accredited body</span>
-          @provider.ProviderName
-        </h3>
-      }
-
-      <table class="ucas-info-table govuk-table">
-        <thead class="govuk-table__head">
-          <tr class="govuk-table__row">
-            <th class="govuk-table__header ucas-info-table__subject-col" scope="col">Course</th>
-            <th class="govuk-table__header ucas-info-table__status-col" scope="col">Status</th>
-            <th class="govuk-table__header ucas-info-table__content-status-col" scope="col">Content</th>
-            <th class="govuk-table__header ucas-info-table__has-vancancies-col" scope="col">Vacancies</th>
-          </tr>
-        </thead>
-        <tbody class="govuk-table__body">
-        @foreach (var course in provider.Courses)
-        {
-          <tr class="govuk-table__row">
-            <td class="govuk-table__cell">
-              <a href="@Url.Action("show", "course", new {providerCode = Model.ProviderCode, accreditingInstCode = course.AccreditingProvider?.ProviderCode, courseCode = course.CourseCode})" class="govuk-heading-s govuk-!-margin-0">@course.Name (@course.CourseCode)</a>
-              <span class="govuk-body-s">@course.TypeDescription</span>
-            </td>
-            <td class="govuk-table__cell">@course.GetCourseStatus()</td>
-            <td class="govuk-table__cell">
-              @if(course.CanHaveEnrichment())
-              {
-                @switch(course.EnrichmentWorkflowStatus)
-                {
-                  case EnumStatus.Draft:
-                    <div class="govuk-tag govuk-tag--inline govuk-tag--draft">draft</div>
-                    break;
-                  case EnumStatus.Published:
-                    <div class="govuk-tag govuk-tag--inline govuk-tag--published">published</div>
-                    break;
-                  default:
-                    <div class="govuk-tag govuk-tag--inline govuk-tag--empty">empty</div>
-                    break;
-                }
-              }
-            </td>
-            <td class="govuk-table__cell">@course.GetHasVacancies()</td>
-          </tr>
-        }
-        </tbody>
-      </table>
-    }
-  </section>
-
-  <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--xl">
-
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h2 class="govuk-heading-l">Request access for someone else</h2>
-      <p class="govuk-body">You can request a DfE Sign-in account for others who manage your courses.</p>
-      <p class="govuk-body"><a class="govuk-link" href="@Url.Action("RequestAccess", "Organisation")">Request access for someone else</a></p>
+      <h2 class="govuk-heading-m"><a class="govuk-link" href="@Url.Action("RequestAccess", "Organisation")">Request access for someone else</a></h2>
+      <p class="govuk-body govuk-!-margin-bottom-8">You can request a DfE Sign-in account for others who manage your courses.</p>
     </div>
   </div>
 </main>
