--- a/src/ui/Views/Organisation/Courses.cshtml
+++ b/src/ui/Views/Organisation/Courses.cshtml
@@ -1,24 +1,24 @@
 @model CourseListViewModel;
 
 @{
-  ViewBag.Title = Model.ProviderName + " courses";
+  ViewBag.Title = "Courses - " + Model.ProviderName;
 }
 
-@if (Model.MultipleOrganisations) {
-  <nav class="govuk-breadcrumbs">
-    <ol class="govuk-breadcrumbs__list">
+<nav class="govuk-breadcrumbs">
+  <ol class="govuk-breadcrumbs__list">
+    @if (Model.MultipleOrganisations) {
       <li class="govuk-breadcrumbs__list-item">
         <a href="@Url.Action("index", "Organisations")" class="govuk-breadcrumbs__link">Organisations</a>
       </li>
-      <li class="govuk-breadcrumbs__list-item" aria-current="page">
-        <a href="@Url.Action("Show", "Organisation", new {providerCode = Model.ProviderCode})">@Model.ProviderName</a>
-      </li>
-      <li class="govuk-breadcrumbs__list-item" aria-current="page">
-        Courses
-      </li>
-    </ol>
-  </nav>
-}
+    }
+    <li class="govuk-breadcrumbs__list-item">
+      <a href="@Url.Action("Show", "Organisation", new {providerCode = Model.ProviderCode})">@Model.ProviderName</a>
+    </li>
+    <li class="govuk-breadcrumbs__list-item" aria-current="page">
+      Courses
+    </li>
+  </ol>
+</nav>
 
 <main role="main" class="govuk-main-wrapper" id="main-content">
   @await Html.PartialAsync("~/Views/Shared/_Alerts.cshtml")
