--- a/src/ui/Views/Course/Show.cshtml
+++ b/src/ui/Views/Course/Show.cshtml
@@ -17,10 +17,10 @@
       </li>
     }
     <li class="govuk-breadcrumbs__list-item">
-      <a href="@Url.Action("Show", "Organisation", new {providerCode = Model.Course.ProviderCode})">@Model.ProviderName</a>
+      <a href="@Url.Action("Show", "Organisation", new {providerCode = Model.Course.ProviderCode})" class="govuk-breadcrumbs__link">@Model.ProviderName</a>
     </li>
     <li class="govuk-breadcrumbs__list-item">
-      <a href="@Url.Action("Courses", "Organisation", new {providerCode = Model.Course.ProviderCode})">Courses</a>
+      <a href="@Url.Action("Courses", "Organisation", new {providerCode = Model.Course.ProviderCode})" class="govuk-breadcrumbs__link">Courses</a>
     </li>
     <li class="govuk-breadcrumbs__list-item" aria-current="page">
       @Model.Course.CourseTitle (@Model.Course.CourseCode)
