--- a/src/ui/Views/Organisation/Courses.cshtml
+++ b/src/ui/Views/Organisation/Courses.cshtml
@@ -12,7 +12,7 @@
       </li>
     }
     <li class="govuk-breadcrumbs__list-item">
-      <a href="@Url.Action("Show", "Organisation", new {providerCode = Model.ProviderCode})">@Model.ProviderName</a>
+      <a href="@Url.Action("Show", "Organisation", new {providerCode = Model.ProviderCode})" class="govuk-breadcrumbs__link">@Model.ProviderName</a>
     </li>
     <li class="govuk-breadcrumbs__list-item" aria-current="page">
       Courses
