--- a/src/ui/Views/Organisation/Show.cshtml
+++ b/src/ui/Views/Organisation/Show.cshtml
@@ -36,7 +36,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h2 class="govuk-heading-m"><a href="@Url.Action("Courses", "Organisation")" class="govuk-link">Courses</a></h2>
+      <h2 class="govuk-heading-m"><a href="@Url.Action("Index", "Course")" class="govuk-link">Courses</a></h2>
       <p>Use this section to:</p>
       <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-8">
         <li>write about each course</li>
