--- a/src/ui/Assets/Styles/components/_related.scss
+++ b/src/ui/Assets/Styles/components/_related.scss
@@ -10,6 +10,11 @@
     margin-bottom: govuk-spacing(4)
   }
 
+  &__block:not(:last-of-type) {
+    border-bottom: 1px solid govuk-colour("grey-2");
+    margin-bottom: govuk-spacing(5);
+  }
+
   &__heading-s {
     margin-bottom: govuk-spacing(1);
   }
