967 Add additional link to footer, update give feedback content
This allows users to search for contact, support, or problem in the page and find a useful link.

--- a/src/ui/Assets/Styles/site.scss
+++ b/src/ui/Assets/Styles/site.scss
@@ -101,3 +101,8 @@ $success-green: #00823b;
   list-style-image: url('/images/dash.png');
   margin-bottom: govuk-spacing(8);
 }
+
+.govuk-footer__content {
+  @include govuk-font($size: 16, $line-height: 1.5);
+  color: $govuk-text-colour;
+}
