--- a/src/ui/Views/Shared/_Layout.cshtml
+++ b/src/ui/Views/Shared/_Layout.cshtml
@@ -59,11 +59,21 @@
   </div>
 }
 
+@section footerTop {
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds govuk-footer__content-container">
+      <p class="govuk-footer__content">
+        <a class="govuk-footer__link" href="mailto:becomingateacher@digital.education.gov.uk">Contact the Becoming a Teacher team</a> for support.
+      </p>
+    </div>
+  </div>
+}
+
 @section footerSupportLinks {
   <h2 class="govuk-visually-hidden">Support links</h2>
   <ul class="govuk-footer__inline-list govuk-!-margin-bottom-0">
     <li class="govuk-footer__inline-list-item">
-      <a href="mailto:becomingateacher@digital.education.gov.uk?subject=Publish%20teacher%20training%20courses%20feedback" class="govuk-footer__link">Give feedback</a>
+      <a href="mailto:becomingateacher@digital.education.gov.uk?subject=Publish%20teacher%20training%20courses%20feedback" class="govuk-footer__link">Give feedback or report a problem</a>
     </li>
     <li class="govuk-footer__inline-list-item">
       <a href="/cookies" class="govuk-footer__link">Cookies</a>
