[1231] Fixed messy text tweaks

--- a/src/ui/Views/Course/Shared/_CourseDetailsHeaderSection.cshtml
+++ b/src/ui/Views/Course/Shared/_CourseDetailsHeaderSection.cshtml
@@ -14,7 +14,7 @@
             </strong>
         </div>
         <p class="govuk-body">
-            <text>It won&#8217;t appear online. To publish it you&#8217;ll need to contact the <a href="@link">Becoming a Teacher team</a>.</text>
+            <text>It won&#8217;t appear online. To publish it you&#8217;ll need to <a href="@link">contact the Becoming a Teacher team</a>.</text>
         </p>
     }
 
