--- a/src/ui/Views/Course/Show.cshtml
+++ b/src/ui/Views/Course/Show.cshtml
@@ -51,7 +51,7 @@
       </li>
 
       <li class="govuk-tabs__list-item" role="presentation">
-        <a class="govuk-tabs__tab" href="https://localhost:3000/organisations/2AT/courses/3CXD" role="tab" tabindex="-1" aria-selected="false">
+        <a class="govuk-tabs__tab" href="@Url.Action("Details", "Course", new {providerCode = Model.Course.ProviderCode, courseCode = Model.Course.CourseCode})" role="tab" tabindex="-1" aria-selected="false">
           Basic details<br>
           <span class="govuk-body-s govuk-!-font-weight-regular pointer-events-none">Locations, outcome, subject</span>
         </a>
